# ApexAgente-CLI

./: README.md  main.py  pyproject.toml  requirements.txt
app/: app.py  completer.py
